[Wayland] Drag and drop alternates between working and not working when switching application focus
Categories
(Core :: Widget: Gtk, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox90 | --- | unaffected |
| firefox91 | --- | unaffected |
| firefox92 | --- | fixed |
People
(Reporter: ke5trel, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Start with
MOZ_ENABLE_WAYLAND=1on Ubuntu 21.04. - Attempt to drag a tab to a different position.
- Alt+Tab to a different application, then back again.
- Attempt to drag a tab to a different position.
- Repeat.
Dragging does not work alternately when app focus is changed.
Does not occur with x11/xwayland.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=da1412413022e9f41073122b340e6f8d79091bb9&tochange=35d406f57982d5cf0a8d3f73421903d99c49ca8b
Regressed by Bug 1717476.
Comment 1•4 years ago
|
||
For me it doesn't work at all after bug 1717476, switching apps doesn't change anything, but I'm on Arch Linux. No idea what makes the difference or if I'm too stupid to do it correctly.
Also customizing the toolbar via drag-and-drop doesn't work after bug 1717476: I can drag an icon, but I can't drop it to another position in the toolbar or remove it from the toolbar, and I can't add an icon either. Martin, do you want me to file another bug for that or can both issues be dealt with in this bug?
| Assignee | ||
Comment 2•4 years ago
|
||
I'll look at it this week.
| Assignee | ||
Comment 3•4 years ago
|
||
Guys, which compositor / DE do you run?
Thanks.
| Assignee | ||
Comment 4•4 years ago
|
||
I can reproduce the D&D failure on tab strip.
Comment 5•4 years ago
|
||
I'm running Gnome Shell 40.3 with Mutter 40.3.
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 6•4 years ago
|
||
Merge WaylandDragAndDropDataOffer and DataOffer classes to avoid potential timing issue when Drag&Drop action is set before WaylandDragAndDropDataOffer is created.
| Assignee | ||
Updated•4 years ago
|
Comment 8•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Updated•4 years ago
|
Description
•