Bug 1722700 [Wayland] Merge WaylandDragAndDropDataOffer and DataOffer classes, r=rmader

Merge WaylandDragAndDropDataOffer and DataOffer classes to avoid potential timing issue when Drag&Drop action is set before WaylandDragAndDropDataOffer is created.

Differential Revision: https://phabricator.services.mozilla.com/D121877